--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,9 @@ footer {
 .navbar {
     background-color: #901cad;
 }
+
+.tab-content {
+    border: 1px solid #ddd;
+    border-top: none;
+    padding: 10px;
+}
