Accordion Display Added

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,7 @@ footer {
     background-color: #901cad;
 }
 
-.tab-content {
-    border: 1px solid #ddd;
-    border-top: none;
-    padding: 10px;
+.accordion-button{
+    background-color: #d3d3d3;
+    
 }
