--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,10 @@ footer {
     background-color: #d3d3d3;
     
 }
+
+.carousel-caption {
+    background-color: rgba(0,0,0,0.5);
+}
+.carousel {
+    border: sold #5637dd;
+}
