--- a/css/styles.css
+++ b/css/styles.css
@@ -44,5 +44,9 @@ footer {
     background-color: rgba(0,0,0,0.5);
 }
 .carousel {
-    border: sold #5637dd;
+    border: solid #5637dd;
+}
+
+.carousel-item p{
+    padding: 0 2px;
 }
