--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,7 @@ $color-secondary: #5637dd;
 $color-pale: #cec8ff;
 $color-mid: #901cad;
 $color-dark: #60106b;
+$color-teal: #17A2B8;
 $color-black-transparent: rgba(0,0,0,0.5);
 
 $body-font: "Open-sans", sans-serif;
@@ -62,3 +63,5 @@ footer {
 .carousel-item p{
     padding: 0 2px;
 }
+
+@import "modal";
